feat: lerna test

--- a/packages/qmyx-tools/package.json
+++ b/packages/qmyx-tools/package.json
@@ -18,5 +18,6 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  }
+  },
+  "gitHead": "c176e9de062f5399eadaa51c6be5479eac04b110"
 }
