--- a/packages/qmyx-bff-tools/package.json
+++ b/packages/qmyx-bff-tools/package.json
@@ -13,5 +13,6 @@
     "@types/node": "^17.0.21",
     "axios": "^0.26.0",
     "typescript": "^4.6.2"
-  }
+  },
+  "gitHead": "c176e9de062f5399eadaa51c6be5479eac04b110"
 }
