--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qmyx",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "devDependencies": {
     "lerna": "^4.0.0"
   }
